navbar no longer collapses which wasn't working as intended

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,7 +64,8 @@ url,
 .logo {
   width: 200px;
   height: 100px;
-  margin-left: -12rem;
+  margin-left: -21rem;
+  margin-right: 2.5rem;
 }
 
 
